--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,12 @@
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
  
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 138, 60%, 40%;
+    --primary-foreground: 138, 75%, 98%;
  
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+ 
+    --secondary:222.2 47.4% 11.2%;
+    --secondary-foreground:210 40% 98%;
  
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
@@ -52,11 +53,11 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
  
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
+    --primary: 138, 40%, 40%;
+    --primary-foreground: 138, 75%, 98%;
  
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
+    --secondary: 210 40% 98%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
  
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
